--- a/Frontend/www/assets/less/main.less
+++ b/Frontend/www/assets/less/main.less
@@ -8,21 +8,22 @@
 @import "pizza/right-panel";
 @import "pizza/left-panel";
 @import "pizza/decoration";
+@import "pizza/order";
 
 * {
-  box-sizing: border-box;
+    box-sizing: border-box;
 }
 
 body {
-  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
-  font-size: 14px;
-  color: @mainTextColor;
-  background-color: #fff;
-  min-width: 594px!important;
+    font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
+    font-size: 14px;
+    color: @mainTextColor;
+    background-color: #fff;
+    min-width: 594px!important;
 }
 
-.container {
-  padding-top: 75px;
-  background-color: #fffff5;
-  min-width: 594px!important;
+.container-fluid {
+    padding-top: 75px;
+    background-color: #fffff5;
+    min-width: 594px!important;
 }
