--- a/Frontend/templates/PizzaMenu_OneItem.ejs
+++ b/Frontend/templates/PizzaMenu_OneItem.ejs
@@ -17,25 +17,82 @@ function getIngredientsArray(pizza) {
 }
 
    %>
+
 <div class="col-md-6 col-lg-4 pizza-card">
+    
     <div class="thumbnail">
+        
         <img class="pizza-icon" src="<%= pizza.icon %>" alt="Pizza">
 
         <% if(pizza.is_new) { %>
-        <span class="label label-danger">Нова</span>
+        <h3 class="pizza-label-new"><span class="label label-danger">Нова</span></h3>
         <% } else if(pizza.is_popular) {%>
-        <span class="label label-success">Популярна</span>
+        <h3 class="pizza-label-popular"><span class="label label-success">Популярна</span></h3>
         <% } %>
-
+        
         <div class="caption">
+            
             <span class="title"><%= pizza.title %></span>
+            
             <div class="type"><%= pizza.type %></div>
+            
             <div class="description">
                 <%= getIngredientsArray(pizza).join(", ") %>
             </div>
+            
+            <div class="row">
+                <% if(pizza.small_size) {%>
+                <% if(pizza.big_size) { %>
+                <div class="col-sm-6 pizza-small">
+                <% } else {%>
+                <div class="col-sm-12 pizza-small">
+                <% } %>
+                    <div>
+                        <img class="ui right spaced avatar image" src="assets/images/size-icon.svg">
+                        <span class="diagonal"><%= pizza.small_size.size %></span>
+                    </div>
+                    
+                    <div>
+                        <img class="ui right spaced avatar image" src="assets/images/weight.svg">
+                        <span class="gram"><%= pizza.small_size.weight %></span>
+                    </div>
+                    
+                    <h2>
+                        <div class="price"><%= pizza.small_size.price %><div style="font-size:14px;"> грн.</div></div>
+                    </h2>
+                    <a class="btn btn-warning buy-button-small" role="button">Купити</a>
+                    
+                </div>
+                <% } %>
+                    
+                <% if(pizza.big_size) { %>
+                <% if(pizza.small_size) { %>
+                <div class="col-sm-6 pizza-big">
+                <% } else { %>
+                    <div class="col-sm-12 pizza-big">
+                <% } %>
+                    <div>
+                        <img class="ui right spaced avatar image" src="assets/images/size-icon.svg">
+                            <span class="diagonal"><%= pizza.big_size.size %></span>
+                    </div>
+                    
+                    <div>
+                        <img class="ui right spaced avatar image" src="assets/images/weight.svg">
+                        <span class="gram"><%= pizza.big_size.weight %></span>
+                    </div>
+                    
+                    <h2>
+                        <div class="price"><%= pizza.big_size.price %><div style="font-size:14px;"> грн.</div></div>
+                    </h2>
+                    <a class="btn btn-warning  buy-button-big" role="button">Купити</a>
+                    
+                </div>
+                <% } %>
+                
+            </div>
+            
         </div>
-
-        <!-- Перед тим щоб показати кнопку необхідно переконатися, що піца має великий розмір -->
-        <button class="btn btn-primary buy-big">Купити велику</button>
+                
     </div>
+    
 </div>
